--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,6 @@ jobs:
   ssh-docker-service:
     runs-on: ubuntu-latest
     needs: [docker-build]
-    timeout-minutes: 7
     steps:
     - uses: actions/checkout@v4
     - uses: actions/download-artifact@v4
@@ -63,19 +62,20 @@ jobs:
     - run: docker import /tmp/ssh-dind-docker-image.tar ${{ steps.meta.outputs.tags }}
     - run: docker image ls -a
     - run: |
-        docker run
+        timeout 5m \
+            docker run \
             --rm --detach --privileged \
         	--ulimit nofile=-1 \
             --ulimit nproc=-1 \
             --ulimit core=-1 \
             --pids-limit -1 \
             --oom-score-adj -500 \
-            ${{ steps.meta.outputs.tags }}
+            ${{ steps.meta.outputs.tags }} \
+        || true
 
   http-docker-service:
     runs-on: ubuntu-latest
     needs: [docker-build]
-    timeout-minutes: 7
     steps:
     - uses: actions/checkout@v4
     - uses: actions/download-artifact@v4
@@ -89,19 +89,20 @@ jobs:
     - run: docker import /tmp/http-dind-docker-image.tar ${{ steps.meta.outputs.tags }}
     - run: docker image ls -a
     - run: |
-        docker run
+        timeout 5m \
+            docker run \
             --rm --detach --privileged \
         	--ulimit nofile=-1 \
             --ulimit nproc=-1 \
             --ulimit core=-1 \
             --pids-limit -1 \
             --oom-score-adj -500 \
-            ${{ steps.meta.outputs.tags }}
+            ${{ steps.meta.outputs.tags }} \
+        || true
 
   https-docker-service:
     runs-on: ubuntu-latest
     needs: [docker-build]
-    timeout-minutes: 7
     steps:
     - uses: actions/checkout@v4
     - uses: actions/download-artifact@v4
@@ -115,19 +116,20 @@ jobs:
     - run: docker import /tmp/https-dind-docker-image.tar ${{ steps.meta.outputs.tags }}
     - run: docker image ls -a
     - run: |
-        docker run
+        timeout 5m \
+            docker run \
             --rm --detach --privileged \
         	--ulimit nofile=-1 \
             --ulimit nproc=-1 \
             --ulimit core=-1 \
             --pids-limit -1 \
             --oom-score-adj -500 \
-            ${{ steps.meta.outputs.tags }}
+            ${{ steps.meta.outputs.tags }} \
+        || true
 
   socket-docker-service:
     runs-on: ubuntu-latest
     needs: [docker-build]
-    timeout-minutes: 7
     steps:
     - uses: actions/checkout@v4
     - uses: actions/download-artifact@v4
@@ -141,14 +143,16 @@ jobs:
     - run: docker import /tmp/socket-dind-docker-image.tar ${{ steps.meta.outputs.tags }}
     - run: docker image ls -a
     - run: |
-        docker run
+        timeout 5m \
+            docker run \
             --rm --detach --privileged \
         	--ulimit nofile=-1 \
             --ulimit nproc=-1 \
             --ulimit core=-1 \
             --pids-limit -1 \
             --oom-score-adj -500 \
-            ${{ steps.meta.outputs.tags }}
+            ${{ steps.meta.outputs.tags }} \
+        || true
 
 #   build:
 #     needs: docker-build
