--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,12 @@
     // "extends": ["@tsconfig/strictest/tsconfig.json", "@tsconfig/node18/tsconfig.json"],
 
     "compilerOptions": {
+        "checkJs": true,
         "pretty": true,
         "sourceMap": true,
         "declaration": true,
         "outDir": "./dist",
+        "resolveJsonModule": true,
         "types": ["node", "heft-jest"],
 
         // https://github.com/tsconfig/bases/blob/main/bases/node18.json
@@ -32,5 +34,5 @@
         "isolatedModules": true,
         "forceConsistentCasingInFileNames": true,
     },
-    "include": ["src/**/*.ts", "test/**/*.ts", "examples/**/*.ts"],
+    "include": ["src/**/*.ts", "test/**/*.ts", "examples/**/*.ts", "bin/**/*.ts", "test/**/*.js"],
 }
