--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,13 +7,6 @@ on:
     branches: ["main"]
 
 env:
-  docker-engine-connection-variants:
-    "[
-      'ssh',
-      'http',
-      'https',
-      'socket'
-    ]"
   platform-variants:
     "[
       'node-18.x',
@@ -25,16 +18,6 @@ env:
       'bun-undici',
       'deno',
       'deno-undici'
-    ]"
-  docker-engine-versions:
-    "[
-      'docker.io/library/docker:23-dind-rootless',
-      'docker.io/library/docker:24-dind-rootless',
-      'docker.io/library/docker:25-dind-rootless',
-      'docker.io/library/docker:26-dind-rootless',
-      'docker.io/library/docker:27-dind-rootless',
-      'docker.io/library/docker:28-dind-rootless',
-      'docker.io/library/docker:dind-rootless'
     ]"
 
 concurrency:
@@ -49,14 +32,10 @@ jobs:
     timeout-minutes: 1
     outputs:
       platform-variants: ${{ steps.compute-matrices.outputs.platform-variants }}
-      docker-engine-versions: ${{ steps.compute-matrices.outputs.docker-engine-versions }}
-      docker-engine-connection-variants: ${{ steps.compute-matrices.outputs.docker-engine-connection-variants }}
     steps:
       - id: compute-matrices
         run: |
           echo "platform-variants=${{ env.platform-variants }}" >> $GITHUB_OUTPUT
-          echo "docker-engine-versions=${{ env.docker-engine-versions }}" >> $GITHUB_OUTPUT
-          echo "docker-engine-connection-variants=${{ env.docker-engine-connection-variants }}" >> $GITHUB_OUTPUT
 
   typescript-build:
     runs-on: ubuntu-latest
@@ -78,44 +57,9 @@ jobs:
       - run: pnpm circular
       - run: pnpm build
 
-  # Checks that the docker images build and publishes them to ghcr.io
-  docker-build:
-    runs-on: ubuntu-latest
-    needs: [compute-matrices]
-    timeout-minutes: 10
-    strategy:
-      matrix:
-        dockerfile: ${{ fromJSON(needs.compute-matrices.outputs.docker-engine-connection-variants) }}
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-      - uses: docker/setup-qemu-action@29109295f81e9208d7d86ff1c6c12d2833863392 # v3
-      - uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3
-      - uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - uses: docker/metadata-action@902fa8ec7d6ecbf8d84d538b9b233a880e428804 # v5
-        id: meta
-        with:
-          images: ghcr.io/${{ github.repository }}/${{ matrix.dockerfile }}-dind
-      - uses: docker/build-push-action@14487ce63c7a62a4a324b0bfb37086795e31c6c1 # v6
-        with:
-          context: .
-          push: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          file: docker/dind-${{ matrix.dockerfile }}.dockerfile
-          build-args: DIND_BASE_IMAGE=docker.io/library/docker:dind
-          platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
-
   docker-engine-tests:
-    needs: [compute-matrices, typescript-build, docker-build]
+    if: false
+    needs: [compute-matrices, typescript-build]
     runs-on: ubuntu-latest
     timeout-minutes: 10
     defaults:
@@ -125,56 +69,22 @@ jobs:
       fail-fast: false
       matrix:
         platform-variant: ${{ fromJSON(needs.compute-matrices.outputs.platform-variants) }}
-        docker-engine-version: ${{ fromJSON(needs.compute-matrices.outputs.docker-engine-versions) }}
-        docker-engine-connection-variant: ${{ fromJSON(needs.compute-matrices.outputs.docker-engine-connection-variants) }}
     env:
       __PLATFORM_VARIANT: ${{ matrix.platform-variant }}
-      __DOCKER_ENGINE_VERSION: ${{ matrix.docker-engine-version }}
-      __CONNECTION_VARIANT: ${{ matrix.docker-engine-connection-variant }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
 
-      - uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - uses: ./.github/actions/rootlesscontainers-apparmor
-      - run: docker pull ${{ matrix.docker-engine-version }}
-
       - if: startsWith(matrix.platform-variant, 'node')
         uses: ./.github/actions/setup-node
-      - if: startsWith(matrix.platform-variant, 'node') && !startsWith(matrix.docker-engine-connection-variant, 'socket')
+      - if: startsWith(matrix.platform-variant, 'node')
         run: pnpm test
-      - if: startsWith(matrix.platform-variant, 'node') && startsWith(matrix.docker-engine-connection-variant, 'socket')
-        run: |
-          sudo -E npm install -g pnpm
-          sudo -E pnpm test
 
       - if: startsWith(matrix.platform-variant, 'bun')
         uses: ./.github/actions/setup-bun
-      - if: startsWith(matrix.platform-variant, 'bun') && !startsWith(matrix.docker-engine-connection-variant, 'socket')
+      - if: startsWith(matrix.platform-variant, 'bun')
         run: bunx --bun vitest
-      - if: startsWith(matrix.platform-variant, 'bun') && startsWith(matrix.docker-engine-connection-variant, 'socket')
-        run: |
-          sudo -E npm install -g bun
-          sudo -E bunx --bun vitest
 
       - if: startsWith(matrix.platform-variant, 'deno')
         uses: ./.github/actions/setup-deno
-      - if: startsWith(matrix.platform-variant, 'deno') && !startsWith(matrix.docker-engine-connection-variant, 'socket')
+      - if: startsWith(matrix.platform-variant, 'deno')
         run: deno task test --watch=false
-      - if: startsWith(matrix.platform-variant, 'deno') && startsWith(matrix.docker-engine-connection-variant, 'socket')
-        run: |
-          sudo -E curl -fsSL https://deno.land/install.sh | sh
-          sudo -E deno task test --watch=false
-
-  # https://github.com/orgs/community/discussions/26822
-  pr-can-merge:
-    if: ${{ always() }}
-    runs-on: ubuntu-latest
-    needs: [docker-engine-tests]
-    steps:
-      - run: exit 1
-        if: ${{ contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled') || contains(needs.*.result, 'skipped') }}
