--- a/tsconfig.examples.json
+++ b/tsconfig.examples.json
@@ -1,10 +1,18 @@
 {
-    "extends": "./tsconfig.base.json",
+    "$schema": "http://json.schemastore.org/tsconfig",
+    "extends": "./tsconfig.base.jsonc",
     "include": ["examples"],
-    "references": [{ "path": "tsconfig.src.json" }],
+    "references": [{ "path": "./tsconfig.src.json" }],
     "compilerOptions": {
+        "tsBuildInfoFile": ".tsbuildinfo/examples.tsbuildinfo",
+        "outDir": ".tsbuildinfo/examples",
         "noEmit": true,
-        "rootDir": "examples",
-        "tsBuildInfoFile": ".tsbuildinfo/examples.tsbuildinfo"
+        "erasableSyntaxOnly": false,
+        "baseUrl": ".",
+        "paths": {
+            "the-moby-effect": ["src/index.ts"],
+            "the-moby-effect/*": ["src/*.ts"]
+        },
+        "types": ["node"]
     }
 }
