--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,10 @@
     "$schema": "http://json.schemastore.org/tsconfig",
     "extends": "./tsconfig.base.jsonc",
     "include": [],
-    "references": [{ "path": "./tsconfig.src.json" }, { "path": "./tsconfig.test.json" }]
+    "references": [
+        { "path": "./tsconfig.src.json" },
+        { "path": "./tsconfig.test.json" },
+        { "path": "./tsconfig.examples.json" }
+        // { "path": "./tsconfig.bin.json" }
+    ]
 }
