--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
           node-version: lts/*
 
       - uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4
+      - run: pnpm install
       - run: pnpm check
       - run: pnpm check
       - run: pnpm lint
