--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,6 +62,7 @@ jobs:
           # sudo sysctl --system
           sudo systemctl stop apparmor
           sudo systemctl disable apparmor
+          sudo aa-teardown
           sudo systemctl restart docker
 
       - if: startsWith(matrix.config.variant, 'node')
